# machinebox

./: .travis.yml  Cargo.toml  README.md
examples/: facebox.rs  movie_model.json  suggestionbox.rs  tagbox.rs  textbox.rs
src/: lib.rs  textbox.rs  utils.rs
src/facebox/: mod.rs  types.rs
src/suggestionbox/: mod.rs  tests.rs  types.rs
src/tagbox/: mod.rs  types.rs
src/videobox/: mod.rs  tests.rs  types.rs
