[package]
name = "machinebox"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
description = "A client SDK for communicating with machinebox boxes"
license = "MPL-2.0"
homepage = "https://github.com/encabulators/machinebox"
documentation = "https://docs.rs/machinebox"
repository = "https://github.com/encabulators/machinebox"
readme = "README.md"
keywords = ["machinebox", "machinelearning", "ML"]

[dependencies]
reqwest = "0.8.4"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"

[dev-dependencies]
mockito = "0.9.0"